--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-three/drei": "^9.56.1",
     "@react-three/fiber": "^8.13.4",
+    "@vercel/analytics": "^1.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
